
** denotes an incompatible change

1.3x

[ BUG FIXES ]

- Using $m->call_next from a helper component should reset base_comp
to the request_comp.  Reported by Mark Elrod.

- The 08-ah.t and 16-live-cgi.t test files could fail with an error
like "Failed to re-load 'Mason::Build'" when Mason was being installed
via the CPANPLUS shell (and maybe other cases). Reported by David
Wheeler.

[ ENHANCEMENTS ]

- Added support for get_server_port() in FakeApache. Patch from Dieter
Piercey.


1.33  May 28, 2006

[ BUG FIXES ]

- If $m->flush_buffer() was called when there was a filter somewhere
in the component chain, the flush did nothing. Task id #596. Reported
by Shane McCarron.

- Added several tests for $m->flush_buffer() and $m->clear_buffer(),
which will hopefully avoid more bugs in this part of the code.

- On Win32, a test failed when Mason tried to use rename to move a dir
into an existing dir. Patch by Shane McCarron. Task id #594 and RT
#17828.

- Trying to load HTML::Mason::ApacheHandler outside of mod_perl caused
an error "like Undefined subroutine &Apache::perl_hook called at
/usr/local/share/perl/5.8.7/HTML/Mason/ApacheHandler.pm line
257". While it will never _run_ outside of mod_perl, it should at
least load.

- Fixed test in 14a-fake_apache.t that failed with CGI.pm >= 3.16.

- The example code in the HTML::Mason::Resolver::Null code was
just wrong. Fixed by John Siracusa.

- Fixed a test failure in 06-compile.t when using bleadperl. RT
#17118.


1.32  January 3, 2006

[ BUG FIXES ]

- Under mod_perl 1.x with error_mode set to output, the headers were
sent after the content when a compilation error occurred.  Reported by
Gareth Kirwan.  Task id #592.

- URI-escape utf8 characters the same way that CGI::escape and
URI::Escape::uri_escape_utf8 do.  Patch by Denis Shaposhnikov.

- On startup Mason creates a file named ".__obj_create_marker" in the
object directory.  Under mod_perl, Mason was not chmod'ing the file